# structured

./: .gitignore  ANNWrapper.cpp  CMakeLists.txt
doc/building/: #building.org#  building.org  requirements.org
gts-0.7.6/: CMakeLists.txt
ts-sonar/: CMakeLists.txt
vcgapps/numeric_stuff/ACE/: amg_eigen_computation.cpp
vrip/src/vrip/: CMakeLists.txt  strings.h  vripGUICmds.h
vsfm/: CMakeLists.txt
